--- a/src/Components/Tiles/SocialMediaTile/SocialMediaTile.module.css
+++ b/src/Components/Tiles/SocialMediaTile/SocialMediaTile.module.css
@@ -25,9 +25,6 @@
 }
 
 @media screen and (min-width: 720px) {
-    .social_media_tile {
-        flex-direction: row;
-    }
     .social_media_container {
         flex-direction: row;
         gap: 2rem;
